// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreItem display properly is mobile 1`] = `
<div
  className="StoreItem-storeItem-0-1-1 StoreItem-storeItemMobile-0-1-2"
  onClick={[Function]}
>
  <img
    alt="icon"
    className="StoreItem-icon-0-1-3"
    src="logoUrlTest"
  />
  <span
    className="StoreItem-name-0-1-4"
  >
    displayTextTest
  </span>
</div>
`;

exports[`StoreItem display properly is not mobile 1`] = `
<div
  className="StoreItem-storeItem-0-1-1"
  onClick={[Function]}
>
  <img
    alt="icon"
    className="StoreItem-icon-0-1-3"
    src="logoUrlTest"
  />
  <span
    className="StoreItem-name-0-1-4"
  >
    displayTextTest
  </span>
</div>
`;
